--- a/AUTHORS
+++ b/AUTHORS
@@ -13,7 +13,9 @@ Marcus Lunzenauer   <marcus.lunzenauer@elanag.com>
 Nico Müller         <nico.mueller@uni-oldenburg.de>
 André Noack         <noack@data-quest.de>
 Cornelia Roser      <roser@hawk-hhg.de>
+Sabine Scheele      <sabine.scheele@hrz.uni-giessen.de>
 David Siegfried     <david.siegfried@uni-vechta.de>
+Martin Stratmann    <martin@herrstratmann.de>
 Stefan Suchi        <suchi@data-quest.de>
 Peter Thienel       <thienel@data-quest.de>
 Jan-Hendrik Willms  <tleilax@gmail.com>
