--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,304 @@
+16.02.2018 v 4.0
+https://develop.studip.de/trac/query?milestone=Stud.IP+4.0
+- Neuzuordnung bei auslaufenden Studienbereichen verhindern [#1938]
+- Rollendatenfelder auf externen Seiten [#3491]
+- Platzhalter für Name des Startsemesters bei Veranstaltungen (templatebasiert) [#4343]
+- Raumplanung: CSV-Export der Anfragenliste [#4464]
+- Export von Belegungslisten eines Raumes als CSV-Datei [#5313]
+- Verwendung von Proxy-Tickets ermöglichen [#5411]
+- Fehlendes Datum bei Evaluationsantworten [#5536]
+- Anzeige von Ankündigungen für Veranstaltungen auf externen Seiten [#5599]
+- Nutzerkennung hinter Besitzer eines Anmeldesets anzeigen [#5713]
+- Blocktermine: mehr als 5 parallele Termine anlegen [#5728]
+- Raumgröße beim Auflösen von Raumanfragen anzeigen [#5733]
+- Ausgabe der Homepage beim Typ "Mitarbeiter (templatebasiert)" [#5734]
+- Format für Veranstaltungsnummer vorgeben [#6230]
+- Default-Werte für Datenfelder [#6234]
+- Raumplanung: Option für "Nur Anfragen für regelmäßige Termine" [#6363]
+- Teilnehmerseite von Einrichtungen renovieren [#6499]
+- Infotexte zu Knoten der Veranstaltungshierarchie beim "Blättern im Veranstaltungsverzeichnis" anzeigen [#6545]
+- Neue Icons für Stud.IP 4.0 [#6614]
+- TemplateSemBrowse: Platzhalter für die IDs der Level im Semtree [#6633]
+- Umstellung der Seite archiv_assi auf Trails [#6658]
+- Konfigurationsordner [#6665]
+- Umstellen des Seite /public/archiv.php auf Trails [#6667]
+- Minimale Passwortlänge vergrößern [#6676]
+- Vendor-Lib "PCLZip" ersetzen [#6687]
+- Veranstaltungsadministration: Überarbeitung der Seitenleiste und Hinzufügen einer Spalte in der Veranstaltungstabelle [#6701]
+- CSV-Export für Teilnehmerliste um Anrede erweitern [#6747]
+- Studienbereiche alphabetisch sortieren [#6750]
+- SORM: Performancesteigerung mit PDO::FETCH_INTO [#6762]
+- Aktionsmenu systemweit einführen [#6823]
+- JS-Lib Validator entfernen [#6840]
+- Löschen ungenutzter Grafik Assets [#6846]
+- Bilduploadgröße hochsetzen [#6848]
+- AJAX Exceptions sollten ein paar mehr Infos ausspucken [#6850]
+- Autoloader-Kompatibilität zu PSR-4 [#6859]
+- jQuery auf 3.x updaten [#6882]
+- Falsche Wiederholungsanzahl bei wöchentlich wiederholten Terminen am Montag [#6884]
+- Aufräumen [#6885]
+- Profil: Skype-Status entfernen [#6889]
+- Alte Form-CSS raus werfen [#6894]
+- User_activities.php auf Trails [#6895]
+- app/models/UserModel.php entfernen [#6898]
+- Alte Plugin-Engine ausbauen [#6900]
+- about-Klasse aus lib/edit_about.inc.php entfernen [#6901]
+- Bulkaktion bei Benutzerverwaltung [#6903]
+- FatalError beim löschen eines Nutzers [#6904]
+- sms_functions.inc.php entfernen [#6905]
+- Anzeigen von allen systenweiten Ankündigungen [#6918]
+- Schliessen-Icon für die Hilfelasche [#6920]
+- mb_* Funktionen verwenden (UTF-8 Umstellung) [#6921]
+- X-Title nicht von Hand setzen [#6925]
+- StEP00305 - Umstellung des Stud.IP Kerns auf UTF-8 [#6926]
+- i18n: Weitere Stellen anpassen [#6929]
+- Vereinfachung der ContentBox [#6973]
+- StEP00303: Mischbetrieb von WYSIWYG und Stud.IP-Markup abschaffen [#6988]
+- Deprecated Icon-Methoden entfernen [#6990]
+- Benachrichtigungen im Dialog öffnen [#6997]
+- REST-Routen für Einrichtungen erstellen [#7000]
+- Veranstaltungsadministration: Auswahl einer Fakultät soll standardmäßig nur deren Veranstaltungen zeigen [#7002]
+- Überarbeitung der Mehr-Seite [#7005]
+- Hinzufügen von Laschentexten in die Datenbank [#7006]
+- Einfacheres vergleichen der aktuellen Stud.IP-Version [#7019]
+- Benutzerverwaltung: Shortcut zur Rollenverwaltung des Nutzers [#7037]
+- Geänderte und neue Icons Stud.IP 4.0 [#7041]
+- MVV Rechteverwaltung Modulteil [#7052]
+- eAufgaben/eTask-Datenstrukturen und Kern-Fragebogen-Fragen harmonisieren [#7059]
+- Verbesserungen für Responsive Design bestimmter Seiten [#7068]
+- Drag&Drop auf Touch-Geräten [#7096]
+- Forum: Links kürzen [#7098]
+- Datenübernahme bei Anmeldung setzt bei Fehler leere Werte [#7112]
+- StEP00309: Navigation 4.0 [#7116]
+- Export Modulbeschreibung Englisch [#7118]
+- MVV Rechteverwaltung Studiengänge nach Fachbereiche sortieren [#7119]
+- MVV-Studiengangs- und Moduldarstellung auf der Detailseite [#7123]
+- Notification für alle SORM-Objekte [#7160]
+- Längenbegrenzung der Telefon-Textfelder erhöhen [#7163]
+- StEP00308: Neuprogrammierung des Dateibereiches [#7165]
+- MVV: Neue Studiengänge können nicht anhand des Fachnamens benannt werden [#7173]
+- MVV Kopieren von Veranstaltungen mit LV-Gruppe [#7179]
+- MVV Gruppierung nach Fachbereichen [#7180]
+- Vereinheitlichung der Suchseiten - Veranstaltungssuche [#7190]
+- Vereinheitlichung der Suchseiten - Archivsuche [#7191]
+- Vereinheitlichung der Suchseiten - Personensuche [#7192]
+- Vereinheitlichung der Suchseiten - Einrichtungssuche [#7193]
+- Vereinheitlichung der Suchseiten - Ressourcensuche [#7194]
+- MVV_ACCESS_ASSIGN_LVGRUPPEN [#7200]
+- Fragebogen kopieren soll ausschaltbar sein [#7206]
+- Bearbeiten eines Modulteils ohne CREATE-Recht nicht möglich [#7208]
+- MVV Modulteilbeschreibungen in Englisch [#7209]
+- MVV-Filter in der Sidebar bei Stg-Versionen [#7215]
+- Cronjobs: Logs per Cronjob per Default löschen lassen [#7226]
+- StEP00313: Gruppierung von Veranstaltungen [#7242]
+- Zuordnung von LV-Gruppen in Veranstaltungsadministration nur sichtbar, wenn Benutzer eine MVV-Rolle hat. [#7248]
+- Infobereich beim Auflösen einer Raumanfrage kompakter formatieren [#7250]
+- Fehlender Modultitel auf Englisch [#7251]
+- Eingaben im Blockanlegeassistenten beim Öffnen aus der letzten Eingabe übernehmen [#7255]
+- Link auf Veranstaltung nach dem Speichern einer Raumanfrage [#7259]
+- MVV: Modulsuche für Nutzer [#7260]
+- Alle Termine eines Semesters auswählen auch bei regelmäßigen Terminen [#7263]
+- Ausgabe des Modultitels statt alternative Bezeichnung bei LV-Gruppen-Zuordnung [#7269]
+- Suche nach LV-Gruppen in der Zuweisung zu Veranstaltungen zu tolerant [#7274]
+- Es werden zu viele Modulverknüfungen angezeigt [#7278]
+- Die Suche nach LV-Gruppen in der LV-Gruppenzuordnung (VA-Administration) hat Probleme mit Umlauten [#7283]
+- MVV Abschluss vs. Abschlusskategorie [#7284]
+- Nach dem Bearbeiten der Semesterzuordnung eines Modulteils verliert man den Kontext [#7297]
+- Update des ckeditor auf Version 4.6.2 [#7299]
+- Beim Kopieren eines Moduls werden Sprachzuordnungen nicht mitkopiert [#7306]
+- Anmelderegeln per Plugin hinzufügbar [#7307]
+- Inkonsistenz: Studiengruppen anlegen unter "Meine Veranstaltungen" [#7308]
+- Benutzer sperren [#7310]
+- MVV: Sortieren der Veranstaltung in der Übersicht [#7311]
+- MVV fehlende englische Modultitel [#7316]
+- Neues Layout für den Startbildschirm [#7317]
+- Ausbauen von uneinheitlichen Bereichsüberschriften im Content [#7320]
+- automatischer "Überlauf" für Navigation [#7326]
+- Vertikale "Schnellnavigation" für die Blaue Kopfzeile [#7327]
+- SessSemName entfernen und neue Context-Klasse hinzufügen [#7328]
+- Markierung des gewählten Bereiches mit "spielfreudiger" Animation [#7329]
+- Konfiguration aufräumen und in die Datenbank verschieben [#7333]
+- Bei Modultiteln wird grundsätzlich kein Code mehr angezeigt [#7335]
+- Default-Einstellungen für die Konfigurationen [#7336]
+- MVV Suche: Sortierung der Fächer in systematischer Suche defekt bei Spracheinstellung <> Deutsch [#7339]
+- Dateiendung fehlt bei Export aus der LV-Gruppenverwaltung [#7347]
+- MVV: Fehlende Modultitel usw. bei Spracheinstellung <> Deutsch [#7348]
+- Breadcrumb-Navigation in der systematischen Modulsuche gibt unnötige Navigationspunkte aus [#7356]
+- MVV Versteckte Veranstaltungen für root und admins [#7370]
+- MVV LV-Gruppenfehler [#7373]
+- Kopieren von Modulen mit Semesterauswahl und übernahme der Zuordnungen zu StgteilAbschnitten [#7374]
+- MVV: Einige Funktionen sollen nur für MVVAdmins verfügbar sein [#7375]
+- LogActions für Statusgruppen [#7376]
+- Datenfeldtyp für formatierten Text [#7379]
+- MVV: Bearbeiten eines Studiengangs [#7385]
+- MVV Rechtesystem: Varianten werden nicht erkannt [#7390]
+- Fehler beim Auf-/Zuklappen der Baumansicht der Modulzuordnungen auf Detailseite einer VA [#7391]
+- Sprachauswahl funktioniert nicht beim Download (PDF/DOC) der Modulbeschreibung [#7422]
+- MVV: LV-Gruppen anlegen [#7428]
+- Die LV-Gruppen-Zuordnung beim kopieren einer Veranstaltung berücksichtigt nicht das neu ausgewählte Semester [#7460]
+- Bei Wiederholungsterminen wird das letzte Vorkommen des Termins evtl. nicht angezeigt [#7470]
+- Termine mit Start- und Endzeit 00:00 werden in der Tages- und Wochenansicht nicht angezeigt [#7472]
+- Navigations-Bilder lassen sich nicht mehr deaktivieren [#7478]
+- Große Menge an Modulzuordnungen macht Dialog mit Modulbeschreibung extrem unübersichtlich [#7481]
+- Dateidownload über REST-API ignoriert anscheinend Lizenzeinstellungen [#7485]
+- Rote Leiste (öffentliche Veranstaltung)  ausbauen [#7487]
+- Darstellung der Markierung für neue Dateien buggt [#7489]
+- Darstellungsfehler beim Sortieren [#7490]
+- MVV Modulverzeichnis > Suche nach Modulcode [#7495]
+- MVV: Modulverzeichnis > Studienverlauf [#7496]
+- MVV: Speicher bzw. Anlegen einen Studienganges [#7497]
+- Textstrings aus Konfigurationsdatei bleiben in Modulbeschreibungen unübersetzt [#7501]
+- PDF-Download der Modulbeschreibung nur in Originalfassung möglich [#7502]
+- Nicht alle Bestandteile des Titels eines Modul(teils) werden übersetzt [#7506]
+- Übersetzungen 4.0 [#7511]
+- Notifications Popover: Runde Ecken im Hover [#7534]
+- WYSIWIG: Hochladen im Wiki schlägt fehl [#7540]
+- Raumplanung: "Nur Anfragen für regelmäßige Termine" zeigt auch Einzelanfragen [#7542]
+- Sinnloses einfaches Anführungszeichen in Query [#7584]
+- Typo in Log-Action der Modulverwaltung [#7588]
+- Sortierung von Studiengangteil-Versionen nach Start-Semester defekt [#7598]
+- Studienverlaufsplan (in der systematischen Modulsuche) ohne zugeordnete Veranstaltungen werden nicht angezeigt [#7602]
+- Im Studienverlaufsplan wird die Fachsemesterzuordnung eines Modulteils nicht für jede konfigurierte Ausprägung angezeigt [#7610]
+- Kontextauswähler in Blubber zu klein [#7611]
+- CVS-Exporte sollten auch UTF-8 sein [#7615]
+- make squeeze im trunk läuft auf Fehler [#7620]
+- Umlaute in der Anzeige von Evaluationen sind defekt [#7637]
+- Leerstrings dürfen nicht mit i18n behandelt werden. [#7670]
+- Von einem fremden Profil kann nicht auf das eigene gesprungen werden [#7675]
+- Tabs scrollen mit [#7737]
+- Unschöne Doppelung der Titelzeile auf der Startseite einer Einrichtung [#7740]
+- Einstellungen: Fehler bei PageLayout::postMessage() [#7746]
+- Leere Inhaltselemente auf dem Profil [#7750]
+- Fatal Error bei Aufruf der Verwaltung der globalen externen Seiten [#7760]
+- UTF-8 Migration entfernt default und not null Angaben aus Tabellen [#7768]
+- USERNAME_REGULAR_EXPRESSION ist nach Migration auf 4.0 nicht gesetzt => Fehlermeldung [#7806]
+- Druckansicht ist kaputt [#7821]
+- Nachrichten können in der Mobilansicht nur umständlich geöffnet werden [#7828]
+- Das Hilfesymbol ist in Dialogen nicht erreichbar [#7833]
+- Automatisches Anlegen von Dateiordnern über Gruppenverwaltung funktioniert nicht [#7835]
+- Fatal Error beim Aufruf von Dateibereichen [#7839]
+- Downloadzahlen von Dateien mit anzeigen [#7840]
+- Cookie "navigation-length" auf allen Seiten [#7848]
+- Navigation kaputt bei Änderung der Fenstergröße [#7849]
+- Abonnieren des Stud.IP-Kalenders funktioniert nicht mehr zuverlässig [#7869]
+- Dateibereich: Hausaufgabenordner zeigt alte Beschreibung im Kopf [#7873]
+- WYSIWYG-Upload funktioniert nicht [#7879]
+- CLI-Skript "plugin_manager" bricht mit Fehler wegen fehlender Klasse ab [#7881]
+- Vertretung kann Kategorien nicht bearbeiten [#7884]
+- Logozeile im responsiven Design sollte entfernt werden [#7897]
+- Tabellen haben unterschiedliche Abstände nach links [#7910]
+- Avatarmenü und Benachrichtigungen sind leicht verschoben [#7916]
+- PublicFolder: Checkbox hinter dem Label [#7945]
+- Fehler beim Wechsel von meheren Cloud-Diensten [#7990]
+- InvalidArgumentException beim Hinzufügen einer Anmelderegel [#8014]
+- Kopieren aus Cloud-Plugins geht nur einseitig [#8018]
+- Filtermechanismus in der globalen Benutzerverwaltung defekt [#8023]
+- Dateibereich: Reihenfolge der Ordner soll festgelegt werden können [#8028]
+- Aktionen in der Ergebnisliste der Nutzerverwaltung [#8030]
+- JS Übersetzungen werden nicht geladen, wenn DEFAULT_LANGUAGE nicht de_DE ist [#8041]
+- Schnellsuche ist verschoben [#8064]
+- Dateibereich: Dateidownloadverhalten und Vorschau inkonsistent [#8075]
+- Touren lassen sich nicht starten [#8105]
+- Fehler beim Anlegen einer neuen Einrichtung [#8116]
+- Zusatzliche CSS-Klassen an Knöpfen fehlen im Dialog [#8122]
+- Blubber: Avatar-Bild ist noch zu groß [#8139]
+- Exception beim Löschen einer Einrichtung [#8143]
+- Anhänge kann man nicht in den "aktuellen" Ordner kopieren [#8152]
+- Rechte-Abfrage bei Lernobjekt-Zuordnung wirft Fehler [#8156]
+- /api.php/user wirft HTTP Status 500 [#8166]
+- /api.php/user/:userId/courses gibt leere JSON-Objekte statt Strings für bestimmte Felder zurück [#8167]
+- Stud.IP 4.0 UTF-8 und SoapClient (NuSoap) [#8173]
+
+27.12.2017 v 3.5.3
+https://develop.studip.de/trac/query?milestone=Stud.IP+3.5.3
+- Falscher Check auf Fachsemester bei bedingte Anmeldungen [#7783]
+- Inkonsistente Anzeige bei Vorlesungsstart mitten in der Woche [#4134]
+- Reihenfolge der Buttons im "Link erstellen"-Dialog ungünstig/nicht konsistent [#5804]
+- Verwirrende Fehlermeldung beim Einfügen eines Links auf eine Wiki-Seite [#5826]
+- WYSIWYG-Editor erzeugt Wiki-Links, wenn nicht im Wiki [#6043]
+- Editor hat extrem breite Fokusmarkierung [#6403]
+- Purifier erzeugt bei "make test" unnötige Ordner HTML und URI [#6410]
+- Bedienleisten des WYSIWYG springen aus dem Dialog [#6928]
+- Dialog zum Ändern der Semesterzeiten eines Termins funktioniert nicht [#6971]
+- HTML5 audio/video-Elemente werden vom Purifier entfernt [#6989]
+- Validierung in ModuleManagementModel::store() nicht umgehbar [#7177]
+- MVV Filter "genehmigt und aktiv" berücksichtigt nicht Institut [#7205]
+- WYSIWYG Zitateben löschen [#7285]
+- Mehrere Ankündigungen lassen sich nicht löschen - Buttons nicht sichtbar [#7286]
+- Gruppenverwaltung, Selbsteintrag: Datums-Picker verwendet [#7314]
+- QuickSearch in Sidebar: Wird ohne JavaScript gesucht, läuft das Lupensymbol aus dem Layout [#7363]
+- Falsche Meldung bei Nachrichten, wenn man keinen Empfänger auswählt [#7419]
+- Select-Elemente ohne Wert sehen deaktiviert aus [#7465]
+- WYSIWYG und I18N::textarea() vertragen sich nicht [#7488]
+- Meine Veranstaltungen: Fehlermeldung in der Ansicht "Studienbereich" [#7537]
+- Wiki Kommentare [#7613]
+- Sprache anderer Nutzer nicht änderbar [#7616]
+- Falsches Semester in Filter der Suche im Modulverzeichnis [#7657]
+- Das zurücksetzen der Suche in der Verwaltungsseite der Studienganteile funktioniert nicht [#7676]
+- Gruppenterminkalender: Die Auswahlliste der freigegebenen Kalender ist nicht sortiert [#7677]
+- Feld Kreditpunkte eines Studiengangteil-Abschnitts ist Pflichtfeld [#7678]
+- Filter nach verantwortlicher Einrichtung auf der Administrationsseite für Module funktioniert nicht [#7687]
+- cli Skripte beenden bei E_USER_WARNING [#7688]
+- MVV: Ändern einer LV_Gruppe [#7696]
+- MVV: LV-Gruppenübersicht falsche Semestseransicht [#7697]
+- MVV: Umlaute bei LV-Gruppensuche werden nicht erkannt [#7708]
+- Hamburger Menu: Navigationspunkte auf gleicher Ebene verschwinden [#7721]
+- Meine Dateien: Löschen mehrerer Dateien schlägt fehl [#7738]
+- Gruppenverwaltung: Beim Bearbeiten wird als "Selbsteintrag bis" auf die aktuelle Zeit gesetzt [#7742]
+- Die Suche nach Studienbereichen in der Veranstaltungsverwaltung funktioniert nicht mit Umlauten [#7743]
+- Fehler "activities.object_id must not be null" beim Bearbeiten einer Literaturliste [#7745]
+- MVV: Fatal-Error [#7751]
+- Mehrfache Erfolgsmeldung bei Änderungen der Kategorien im Profil [#7752]
+- Ändern der Startwoche bei Termine mit bereits gebuchten Räumen [#7756]
+- MVV: Verwaltungsseite der Studiengangteile zeigt nach Suche evtl. falsche Trefferanzahl [#7757]
+- PHP7: Error: Using $this when not in object context [#7759]
+- Meine Veranstaltungen: Veranstaltungen ohne Studienbereich anzeigen [#7766]
+- MultiCopy und Chrome: Scrollbars fehlen in Kategorieauswahlboxen [#7774]
+- Aufruf von seminar_main.php endet in unschöner Exception [#7775]
+- Falsche Heimateinrichtung bei der Verwaltung von Grunddaten [#7777]
+- Termindetails: Fatal Error [#7781]
+- Kaputter Link von Ausprägungen eines Studiengangs zu Studienverlaufsplan [#7782]
+- Forum: "Link zu diesem Beitrag" funktioniert nicht [#7784]
+- Editor funktioniert nicht im IE11 in einem Dialog [#7785]
+- Alle Teilnehmer eines Kurses werden als "neu" angezeigt [#7787]
+- Kaputte Dateinamen im Fragebögen-Export [#7788]
+- Falsche Vererbung der Berechtigung an Zuordnungen von Modulen und Modulteilen zu Studiengangteilabschnitten [#7791]
+- Toolbar-Breite zu schmal im Chrome [#7794]
+- MVV: Falsche Bezeichnung eines Studiengangsteilabschnitt-Kommentar [#7796]
+- UserFilter ignoriert Bedingungen, wenn diese leere Liste liefern [#7799]
+- Meine Veranstaltungen nach Studienbereichen gruppiert unterschlägt Veranstaltungen [#7807]
+- Wochenansicht im Terminkalender zeigt keine Termine an [#7811]
+- Ankündigung in Veranstaltung erstellen führt zu einer Fehlermeldung [#7812]
+- Request-Parameter "aggregation" bei Externen Seiten führt zu leerem Ergebnis [#7817]
+- Anmelderegel mit Datenfeld funktioniert nicht bei nicht vorhandenen Einträgen [#7819]
+- PHP Warnings auf Veranstaltungsübersicht [#7822]
+- "You are account" -> "Your account" [#7823]
+- CLI-Skript "biest7783-fix.php" bricht mit Fatal error ab [#7834]
+- XSS-Schwachstelle auf der Adminverwaltung von Evaluationen [#7836]
+- Unschönheit bei der Übersetzung [#7837]
+- LOG_ENABLE hat keine Funktion mehr [#7843]
+- Speichern der Grunddaten einer VA nach Ablauf der Session zerstört die Einrichtungszuordnung [#7847]
+- Ablaufplan: Termin ausfallen lassen löscht Thema [#7856]
+- Mode "passthrough" wird im Export nie erkannt [#7858]
+- Defekte Umlaute beim Anlegen/Bearbeiten von Semestern (bis 3.5) [#7861]
+- Buttons haben im Chrome zum Teil abgerundete Ecken [#7863]
+- Fehlerhafte Darstellung von Umlauten bei Dateiupload [#7864]
+- Dateiupload im IE ist kaputt [#7870]
+- Forum schickt Emails an gesperrte Benutzer [#7875]
+- Falsche Verlinkung und falsches Icon [#7886]
+- Studiengruppen: Änderungen an Teilnehmern werfen keine Notifications [#7888]
+- Problem beim copy & past aus Word-Dateien in Firefox 57 [#7907]
+- Export Veranstaltungskatalog [#7908]
+- Umwandlung von Terminen in Ex-Termine ist inkonsistent gelöst [#7909]
+- Einstellung für Semesterlaufzeit versteckt hinter Funktion "Startsemester ändern" [#7912]
+- Fragebögen-Widget: Verwirrende Mitteilungen [#7935]
+- Bearbeiten einer Teilnehmergruppe fragt ohne Änderungen nach Bestätigung [#7951]
+- JS: [data-secure] wird fälschlicherweise getriggert [#7954]
+- sendfile.php: Range-Header-Variante falsch [#7971]
+- Typo: Studiernde statt Studierende [#7975]
+- Personensuche findet keine Nutzerkennungen [#8019]
+- Links auf interne Seiten sollten wie bei Stud.IP-Markup hervorgehoben werden. [#5830]
+
 05.08.2017 v 3.5.2
 https://develop.studip.de/trac/query?milestone=Stud.IP+3.5.2
 - Aktivitäten: Zuviel Informationen? [#6819]
