--- a/locale/en/LC_MESSAGES/studip.po
+++ b/locale/en/LC_MESSAGES/studip.po
@@ -16420,7 +16420,7 @@ msgstr "To your profile page"
 
 #: ../lib/navigation/ProfileNavigation.php:84
 #: ../lib/navigation/AvatarNavigation.php:37
-msgid "Nutzerdaten"
+msgid "Persönliche Angaben"
 msgstr "User details"
 
 #: ../lib/navigation/ProfileNavigation.php:90
@@ -31402,7 +31402,7 @@ msgstr "Institute allocation changed!\n"
 #: ../app/controllers/settings/account.php:32
 #: ../app/controllers/settings/account.php:34
 #: ../app/views/settings/account/index.php:28
-msgid "Benutzerkonto bearbeiten"
+msgid "Persönliche Angaben bearbeiten"
 msgstr "Edit user profile"
 
 #: ../app/controllers/settings/account.php:79
@@ -31444,7 +31444,7 @@ msgid "Bitte überprüfen Sie Ihre Eingaben:"
 msgstr "Please check your input:"
 
 #: ../app/controllers/settings/account.php:152
-msgid "Ihre Nutzerdaten wurden geändert."
+msgid "Ihre persönlichen Angaben wurden geändert."
 msgstr "Your user details have been changed."
 
 #: ../app/controllers/settings/account.php:154
@@ -34579,7 +34579,7 @@ msgstr "The person is already assigned to the institute."
 #: ../app/controllers/institute/members.php:309
 #: ../app/controllers/institute/members.php:397
 msgid ""
-"Um Rechte etc. zu ändern folgen Sie dem Link zu den Nutzerdaten der Person!"
+"Um Rechte etc. zu ändern folgen Sie dem Link zu den persönlichen Angaben der Person!"
 msgstr ""
 "To change permissions etc. follow the link to the user data of the person!"
 
@@ -46449,7 +46449,7 @@ msgstr "Do you really want to sign off the \"%s\"?"
 msgid ""
 "Sie haben sich noch keinen Einrichtungen zugeordnet.\n"
 "           Um sich Einrichtungen zuzuordnen, nutzen Sie bitte die "
-"entsprechende %sOption%s unter \"Nutzerdaten - Studiendaten\"\n"
+"entsprechende %sOption%s unter \"Persönliche Angaben - Studiendaten\"\n"
 "           auf Ihrer persönlichen Einstellungsseite."
 msgstr ""
 "You have not allocated yourself to an institute. In order to allocate "
