--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,86 @@
+17.03.2018 v 4.0.2
+https://develop.studip.de/trac/query?milestone=Stud.IP+4.0.2
+- select.submit-upon-select funktioniert nur sporadisch [#8011]
+- Export von Evaluation wirft Fatal Error [#8205]
+- UnexpectedValueException: content_terms_of_use_entries.is_default must not be null. [#8248]
+- SQL Integrity contraint violation bei ForumVisit [#8250]
+- InvalidArgumentException beim Versuch, einen fremden persönlichen Dateibereich zu betreten [#8252]
+- Datei hinzufügen aus Cloud-Plugin geht nicht [#8253]
+- PHP Warning:  Missing argument 2 for DocumentController::download_action() [#8258]
+- Formular Raumsuche [#8263]
+- Fehlermeldung beim Übernehmen aller Einträge einer Literaturliste in die Merkliste [#8270]
+- Falsche Verlinkung bei der Zuweisungen von Pluginrollen und deren Einrichtungen [#8274]
+- "Alle als gelesen Markieren" fehlt [#8283]
+- Veranstaltungsdetails / Beschreibung [#8285]
+- TypeError beim Verschieben eines Ordners an die gleiche Stelle, wo er herkommt [#8290]
+- Aktivieren von Plugins in Einrichtung nicht mehr möglich. [#8294]
+- Performanceprobleme Emailbenachrichtigungen [#8300]
+- Modulübersicht fehlt in der responsiven Ansicht das Layout [#8307]
+- Hausaufgaben-Ordner: CSV-Datei mit Dateiinfos fehlt beim Herunterladen als ZIP-Archiv [#8311]
+- Fehler beim Zuwseisen einer Statusgruppe als Admin [#8314]
+- Evaluationen lassen sich nicht zu- /aufklappen [#8327]
+
+17.03.2018 v 3.5.4
+https://develop.studip.de/trac/query?milestone=Stud.IP+3.5.4
+- Neuen Nutzer anlegen endet mit Fatal Error [#7747]
+- PHP Warning courseset/instcourses.php [#7764]
+- Benutzeradministration fehlerhaft [#7798]
+- Eintragung in Gruppen - Problem mit Exklusiveintrag [#7939]
+- Forum: Beiträge im PDF-Export sind falsch sortiert [#7986]
+- Mehrere Bedingungsblöcke und Kontingentierung [#8010]
+- User-Routen erwarten Ids von 32 Zeichen [#8025]
+- Admins können die Zeiten des Einrichtungsstundenplans nicht ändern [#8033]
+- Admin kann den VA-Stundenplan nicht anzeigen, wenn er eine Einrichtung + alle untergeordneten Institute ausgewählt hat [#8034]
+- Exception in I18NString, wenn DEFAULT_LANGUAGE nicht in CONTENT_LANGUAGES enthalten ist [#8037]
+- Sortierung von "Meine Veranstaltungen" bei aktivierter Einstellung IMPORTANT_SEMNUMBER zum Teil willkürlich [#8059]
+- Zu lange Beschreibung bei Registrierung von Apps in Stud.IP für zu SQL Fehler [#8069]
+- Verwaltungsseite einer Veranstaltung: Benachrichtigung bei ausfallendem Termin wird nicht gesendet [#8078]
+- Verwaltungsseite einer Veranstaltung: Zeiten/Räume: Inkonsistenz: Klick auf Löschen-Symbol öffnet den Ausfall-Dialog nicht [#8085]
+- Falsche Anzeige der Sortierungs-Icons unter "Teilnehmende" (Studiengruppen usw.) [#8115]
+- Icons auf deaktivierten Button haben hover-Effekt [#8123]
+- PHP 7.2: Fehler mit StudipPDO [#8129]
+- ActivityFeed: Anonyme Forenposts werden nicht anonym dargestellt [#8136]
+- Overflow in sidebar-widget-content wird nicht berücksichtigt [#8163]
+- Route /message/:message_id bricht mit InvalidArgumentException ab. [#8170]
+- HTML-Markierung fehlt im Wiki bei "Speichern und weiter bearbeiten" im WYSIWYG-Editor [#8176]
+- Fehlerhafte Darstellung von Standard-Plugins auf der Übersichtsseite einer Veranstaltung [#8179]
+- Route /user/:userId/events wirft fatal error [#8182]
+- Fehler bei Actionmenu in klappbaren Tabelleninhalten [#8189]
+- XSS-Schwachstelle beim Autorisieren einer App via OAuth [#8204]
+- Literaturverwaltung: Löschen eines selbst erstellten Eintrages wirft Fehler [#8208]
+- Download schlägt bei großen Dateien fehl (memory limit) [#8210]
+- Exkursionen werden nicht auf der Übersichtsseite einer Veranstaltung angezeigt [#8215]
+- Veranstaltungsassistent ignoriert SEMESTER_TIME_SWITCH [#8227]
+- Raumbeschreibungen enthalten keine Formatierungen [#8230]
+- Warning: A non-numeric value encountered in app/controllers/admin/plugin.php on line 165 [#8241]
+- Exception beim Löschen von Nutzern [#8244]
+- Fehlermeldung bei BLubber [#8249]
+- UnexpectedValueException: user_info.publi must not be null [#8255]
+- Einrichtungssetie zugänglich, obwohl freier Zugriff aus ist [#8265]
+- ActivityStreams können nicht gefiltert werden [#8269]
+- Route /user/:user/institutes gibt falsche Anzahl von Einrichtungen zurück und prüft nicht, ob Nutzer existiert [#8278]
+- Personen können zur Warteliste hinzugefügt werden, obwohl das Anmeldeset noch nicht durchgelaufen ist [#8287]
+- Exception wenn Blubber auf dem Profil im nicht eingeloggten Zustand aufgerufen wird [#8291]
+- Blubber-Menüpunkt auf Profil hängt die User-Id an [#8296]
+- Buttons im Tabellenfuß (tfoot) haben zu viel Abstand [#8309]
+- Ankündigung erstellen: "Kommentare zulassen" nicht anklickbar [#8320]
+- Verwaltung von Nutzerdomänen auf POST umstellen [#2380]
+
+02.03.2018 v 4.0.1
+https://develop.studip.de/trac/query?milestone=Stud.IP+4.0.1
+- Mehr-Seite bei neuen Veranstaltungen: Deaktivierung eines Veranstaltungsmoduls liefert zu viele Erfolgsmeldungen [#8153]
+- Registrierung kaputt [#8190]
+- Kein Logout mit Status user [#8198]
+- Studiengruppen anlegen als user möglich [#8199]
+- Nachrichten verschicken als user möglich [#8200]
+- Auswertung von Evaluation wirft (manchmal) Fatal Error [#8206]
+- Tools/Export als pdf geht nicht [#8207]
+- API: Route /studip/settings bricht mit Fatal Error ab [#8211]
+- Neue TLDs nicht berücksichtigt [#8214]
+- Inbox/Outbox Ordner zeigen Dateien von gelöschten Nachrichten an [#8219]
+- Verschieben von Dateien erzeugt keine eindeutigen Namen [#8228]
+- Aktualisierung der Stud.IP-Installationsanleitung [#8242]
+
 16.02.2018 v 4.0
 https://develop.studip.de/trac/query?milestone=Stud.IP+4.0
 - Neuzuordnung bei auslaufenden Studienbereichen verhindern [#1938]
